PROJECT( dutch_national_flag )
SET( DUTCH_SOURCES 
dutch_national_flag.cpp)
ADD_EXECUTABLE( dutch_national_flag ${DUTCH_SOURCES} )

PROJECT( subarray_with_given_sum )
SET( SUBARRAY_SOURCES 
subarray-with-given-sum.cpp)
ADD_EXECUTABLE( subarray_with_given_sum ${SUBARRAY_SOURCES} )

PROJECT( 3sum )
SET( 3SUM_SOURCES 
3sum.cpp)
ADD_EXECUTABLE( 3sum ${3SUM_SOURCES} )
